# SCL

./: .gitignore  README.md  asset-manifest.json  cleaned.csv  clustered.csv  clustered_minimal.csv  data.csv  index.html  package-lock.json  package.json  pyproject.toml
.ipynb_checkpoints/: demo-checkpoint.ipynb
map/: package-lock.json  package.json
map/src/: App.js
map/src/components/: Building.js  ClusterMap.js  D3Visualization.js  Factory.js  Tree.js
notebooks/: cleaning.ipynb  demo2.ipynb
static/js/: main.577c0241.js  main.577c0241.js.map
