[tool.poetry]
name = "scl"
version = "0.1.0"
description = ""
authors = ["Ruwei Ma"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.2"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
scikit-learn = "^1.5.2"
torch = "^2.5.0"
transformers = "^4.46.0"
plotly = "^5.24.1"
matplotlib = "^3.9.2"
adjusttext = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
